--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "db:init": "run-s \"db:migrate-save -- --name 'initial version'\" db:migrate-up seed",
     "prisma:generate": "prisma generate",
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
-    "docker:build": "docker build ."
+    "docker:build": "docker build .",
+    "start:local": "npm run docker:db & nest start"
   },
   "dependencies": {
     "@nestjs/common": "^7.3.2",
