--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,6 @@ POSTGRESQL_PASSWORD=admin
 POSTGRESQL_PORT=5432
 POSTGRESQL_URL=postgres://admin:admin@localhost:5432
 BCRYPT_SALT=10
+
+SERVE_STATIC_ROOT_PATH=../admin/build
+SERVE_STATIC_CLIENT_PATH=../client/
