--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/passport-http": "^0.3.8",
+    "@types/react-dom": "^17.0.0",
     "apollo-server-express": "^2.19.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
@@ -45,10 +46,12 @@
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
+    "next": "^10.0.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^3.9.7"
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
@@ -56,6 +59,8 @@
     "@prisma/cli": "2.11.0",
     "@types/jest": "^26.0.5",
     "@types/normalize-path": "^3.0.0",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
     "@types/supertest": "^2.0.10",
     "jest": "^26.1.0",
     "supertest": "^4.0.2",
