--- a/server/package.json
+++ b/server/package.json
@@ -46,7 +46,7 @@
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "next": "^10.0.5",
+    "next": "^10.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
@@ -54,12 +54,12 @@
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
+    "@nestjs/cli": "7.5.1",
     "@nestjs/testing": "^7.3.2",
     "@prisma/cli": "2.11.0",
     "@types/jest": "^26.0.5",
-    "@types/normalize-path": "^3.0.0",
     "@types/node": "^14.14.22",
+    "@types/normalize-path": "^3.0.0",
     "@types/react": "^17.0.0",
     "@types/supertest": "^2.0.10",
     "jest": "^26.1.0",
