--- a/server/package.json
+++ b/server/package.json
@@ -22,36 +22,46 @@
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.3.2",
     "@nestjs/graphql": "^7.9.1",
-    "@nestjs/passport": "^7.1.0",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.3.2",
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/swagger": "^4.6.1",
     "@prisma/client": "2.11.0",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
+    "@types/passport": "^1.0.5",
     "@types/passport-http": "^0.3.8",
     "@types/react-dom": "^17.0.0",
     "apollo-server-express": "^2.19.0",
+    "autoprefixer": "^10.2.3",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "fast-glob": "^3.2.4",
+    "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "graphql-tools": "^4.0.8",
     "nest-access-control": "^2.0.2",
     "nest-morgan": "^1.0.1",
     "nestjs-prisma": "^0.7.0",
+    "next": "^10.0.0",
+    "nookies": "^2.5.2",
     "normalize-path": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
-    "next": "^10.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.4",
-    "ts-node": "^9.0.0"
+    "tailwindcss": "^2.0.2",
+    "ts-node": "^9.0.0",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@nestjs/cli": "7.5.1",
@@ -60,6 +70,7 @@
     "@types/jest": "^26.0.5",
     "@types/node": "^14.14.22",
     "@types/normalize-path": "^3.0.0",
+    "@types/passport-local": "^1.0.33",
     "@types/react": "^17.0.0",
     "@types/supertest": "^2.0.10",
     "jest": "^26.1.0",
