--- a/server/package.json
+++ b/server/package.json
@@ -70,12 +70,17 @@
     "@types/jest": "^26.0.5",
     "@types/node": "^14.14.22",
     "@types/normalize-path": "^3.0.0",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^17.0.0",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
     "jest": "^26.1.0",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.3"
+    "ts-jest": "^26.1.3",
+    "typescript": "^4.1.3"
   },
   "jest": {
     "preset": "ts-jest",
