--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,7 @@
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
     "docker:build": "docker build .",
     "start:local": "npm run docker:db & nest start",
-    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "prepublish": "npm run build",
-    "precommit": "npm run lint:eslint",
-    "prepush": "npm run test"
+    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@nestjs/common": "^7.3.2",
@@ -47,7 +44,6 @@
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "graphql-tools": "^4.0.8",
-    "husky": "^4.3.8",
     "nest-access-control": "^2.0.2",
     "nest-morgan": "^1.0.1",
     "nestjs-prisma": "^0.7.0",
@@ -82,6 +78,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
+    "husky": "^4.3.8",
     "jest": "^26.1.0",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.3",
@@ -93,5 +90,12 @@
     "modulePathIgnorePatterns": [
       "<rootDir>/dist/"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "prepublish": "npm run build",
+      "precommit": "npm run lint:eslint",
+      "prepush": "npm run test"
+    }
   }
 }
