improve the docker file

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,40 @@
+node_modules
+npm-debug.log
+Dockerfile*
+docker-compose*
 .dockerignore
-docker-compose.yml
-Dockerfile
+.git
+.gitignore
+README.md
+LICENSE
+.vscode
+
+admin/node_modules
 admin/build/
-admin/node_modules/
-admin/.env
+admin/npm-debug.log
+admin/Dockerfile*
+admin/docker-compose*
+admin/.dockerignore
+admin/.git
 admin/.gitignore
-server/dist/
-server/node_modules/
-server/.env
+admin/README.md
+admin/LICENSE
+admin/.vscode
+admin/.env
+admin/.prettierignore
+admin/.eslintrc.js
+
+server/node_modules
+server/build/
+server/npm-debug.log
+server/Dockerfile*
+server/docker-compose*
+server/.dockerignore
+server/.git
 server/.gitignore
+server/README.md
+server/LICENSE
+server/.vscode
+server/.env
 server/.prettierignore
+server/.eslintrc.js
