--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,9 @@
     "@nestjs/platform-express": "^7.3.2",
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/swagger": "^4.6.1",
+    "@nestjs/cli": "7.5.1",
     "@prisma/client": "2.11.0",
+    "@prisma/cli": "2.11.0",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/passport": "^1.0.5",
@@ -70,9 +72,8 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
-    "@nestjs/cli": "7.5.1",
+    
     "@nestjs/testing": "^7.3.2",
-    "@prisma/cli": "2.11.0",
     "@types/jest": "^26.0.5",
     "@types/node": "^14.14.22",
     "@types/normalize-path": "^3.0.0",
@@ -102,5 +103,9 @@
       "pre-commit": "npm run lint:eslint",
       "pre-push": "npm run test"
     }
+  },
+  "engines": {
+    "node": ">=14.15.0",
+    "npm": ">=6.14.8"
   }
 }
