--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       args:
-        NPM_LOG_LEVEL: notice
+        NPM_LOG_LEVEL: verbose
     ports:
       - "${SERVER_PORT}:80"
     environment:
