--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,8 @@
+NODE_ENV=development
+JWT_SECRET=ajoe_secret_md9s8998232
 POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 POSTGRESQL_PORT=5432
 POSTGRESQL_URL=postgres://admin:admin@localhost:5432
 BCRYPT_SALT=10
 SERVE_STATIC_ROOT_PATH=../admin/build
-
-# @TODO remove jwt from env to process.env
-JWT_SECRET=ajoe_secret_md9s8998232
