--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "start": "nest start",
     "start:watch": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "build": "nest build",
+    "build": "next build & nest build",
+    "build:next": "next build",
     "test": "jest --config ./jest.config.js",
     "seed": "ts-node scripts/seed.ts",
     "db:migrate-save": "prisma --experimental migrate save",
@@ -72,7 +73,6 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
-    
     "@nestjs/testing": "^7.3.2",
     "@types/jest": "^26.0.5",
     "@types/node": "^14.14.22",
