--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,18 +5,37 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2017",
-    "lib": ["ES2020"],
+    "lib": [
+      "ES2020",
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "sourceMap": true,
     "baseUrl": "./",
     "outDir": "./dist",
-    "incremental": true,
+    "incremental": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strictPropertyInitialization": false,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "moduleResolution": "node",
+    "isolatedModules": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "client",
+    "pages",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
