--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "scripts": {
     "start": "nest start",
+    "start:local": "npm run docker:db & nest start",
     "start:watch": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "build": "next build & nest build",
+    "build": "nest build",
     "build:next": "next build",
     "test": "jest --config ./jest.config.js",
     "seed": "ts-node scripts/seed.ts",
@@ -16,8 +17,8 @@
     "prisma:generate": "prisma generate",
     "docker:db": "docker-compose -f docker-compose.db.yml up -d",
     "docker:build": "docker build .",
-    "start:local": "npm run docker:db & nest start",
-    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier": "prettier --config .prettierrc {client,src,pages}/**/*.{ts,tsx} --write"
   },
   "dependencies": {
     "@nestjs/common": "^7.3.2",
@@ -86,6 +87,7 @@
     "eslint": "^7.18.0",
     "husky": "^4.3.8",
     "jest": "^26.1.0",
+    "prettier": "2.2.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.3",
     "typescript": "^4.1.3"
