--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,10 +6,7 @@
     "experimentalDecorators": true,
     "target": "es2017",
     "lib": [
-      "ES2020",
-      "dom",
-      "dom.iterable",
-      "esnext"
+      "ES2020"
     ],
     "sourceMap": true,
     "baseUrl": "./",
@@ -32,6 +29,7 @@
     "src",
     "client",
     "pages",
+    "**/*.json",
     "**/*.ts",
     "**/*.tsx"
   ],
