--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "prettier": "prettier --config .prettierrc {client,src,pages}/**/*.{ts,tsx} --write"
   },
   "dependencies": {
+    "@nestjs/cli": "7.5.1",
     "@nestjs/common": "^7.3.2",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.3.2",
@@ -31,9 +32,8 @@
     "@nestjs/platform-express": "^7.3.2",
     "@nestjs/serve-static": "^2.1.3",
     "@nestjs/swagger": "^4.6.1",
-    "@nestjs/cli": "7.5.1",
-    "@prisma/client": "2.11.0",
     "@prisma/cli": "2.11.0",
+    "@prisma/client": "2.11.0",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/passport": "^1.0.5",
@@ -45,19 +45,18 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "date-fns": "^2.16.1",
-    "gray-matter": "4.0.2",
-    "remark": "13.0.0",
-    "remark-html": "13.0.1",
     "dotenv": "^8.2.0",
     "fast-glob": "^3.2.4",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "graphql-tools": "^4.0.8",
+    "gray-matter": "4.0.2",
     "mobx-react": "^7.1.0",
     "nest-access-control": "^2.0.2",
     "nest-morgan": "^1.0.1",
     "nestjs-prisma": "^0.7.0",
     "next": "^10.0.0",
+    "node-sass": "^5.0.0",
     "nookies": "^2.5.2",
     "normalize-path": "^3.0.0",
     "npm-run-all": "^4.1.5",
@@ -69,6 +68,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
+    "remark": "13.0.0",
+    "remark-html": "13.0.1",
     "swagger-ui-express": "^4.1.4",
     "tailwindcss": "^2.0.2",
     "ts-node": "^9.0.0",
