--- a/server/package.json
+++ b/server/package.json
@@ -67,6 +67,7 @@
     "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-use": "^17.1.1",
     "reflect-metadata": "^0.1.13",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
